= 2.0.0.96 =
* Option added to make zip/post code as a required field - FIXED
* The Open Graph image does not work from geodirectory categories - FIXED

= 2.0.0.95 =
* Changes for Ninja Forms fix related to API requests - CHANGED
* [gd_post_meta] add support for default category & post status - ADDED
* [gd_post_meta] allow option to show icon only - ADDED
* GD > Recently Viewed now supports Elementor pro skins - ADDED
* Should not send comment email notification to author for spam comment - CHANGED
* OSM Directions API changed to non SSL temporarily to fix their certificate error - CHANGED
* [gd_post_badge] is_greater_than condition is not working with post date - FIXED
* Elementor Image dynamic field fallback image not working - FIXED
* Elementor Pro search template conditions added for specific CPTs - ADDED
* Elementor GD Archive Item template dynamic background & style is not working - FIXED
* Schema list updated to add some new types - ADDED
* Add ID in nav endpoints to avoid notice - ADDED
* Dynamic content widget does not validates fields excluded from package - FIXED
* GD custom field SEO variables not working in Yoast meta title & description - FIXED
* Warning added to setting `Allow posting without logging in` when WP Engine hosting is used that an extra step is needed - ADDED

= 2.0.0.94 =
* Image lightbox can show image id if title is empty - FIXED
* Switching package shows all images instead of package image limit - FIXED
* Able to set default zoom level on add listing page map - ADDED
* City, region names with Greek characters causes issue in meta title - FIXED
* AyeCode Connect plugin added in recommend plugins list - ADDED
* GD > Post meta for overall_rating is now rounded to one decimal place (raw value still available) - CHANGED
* Titles and meta value for overall_rating is now rounded to one decimal place - CHANGED
* GD > Post Images, when using screenshots from custom fields, screenshots can now link to different URL value - ADDED