@@ -31,7 +31,7 @@ class GeoDir_Elementor_Template_Conditions_Archive extends \ElementorPro\Modules
 	}
 
 	public function get_label() {
-		return __( 'GeoDirectory', 'geodirectory' );
+		return __( 'GeoDirectory Archive', 'geodirectory' );
 	}
 
 	public function get_all_label() {
