@@ -1,6 +1,7 @@
 = 2.0.0.96 =
 * Option added to make zip/post code as a required field - FIXED
 * The Open Graph image does not work from geodirectory categories - FIXED
+* Text changes for Elementor Template Publish Settings - CHANGED
 
 = 2.0.0.95 =
 * Changes for Ninja Forms fix related to API requests - CHANGED
